--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.0.0'
-
+        classpath 'com.nabilhachicha:android-native-dependencies:0.1'
+        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.+'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
