--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -5,6 +5,14 @@ android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
 
+    // prevent ndk from building automagically
+    android {
+        sourceSets.main {
+            jniLibs.srcDir 'src/main/libs'
+            jni.srcDirs = [] //disable automatic ndk-build
+        }
+    }
+
     defaultConfig {
         applicationId "nl.sison.android.node_jni"
         minSdkVersion 20
